--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
+    <header></header>
+    <main></main>
+    <footer>
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/huyphan2210#" target="_blank">Huy Phan</a>.
+    </footer>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
